create Vehicle, Van and Track (api contract yaml, repository and entity)
